--- a/HGPlaceholders/Classes/Cells/PlaceholderCollectionViewCell.xib
+++ b/HGPlaceholders/Classes/Cells/PlaceholderCollectionViewCell.xib
@@ -1,49 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlaceholderCollectionViewCell" id="gTV-IL-0wX" customClass="PlaceholderCollectionViewCell" customModule="HGPlaceholders" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="305" height="367"/>
+            <rect key="frame" x="0.0" y="0.0" width="328" height="436"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="305" height="367"/>
+                <rect key="frame" x="0.0" y="0.0" width="328" height="436"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXU-dt-vhe">
-                        <rect key="frame" x="16" y="60" width="273" height="233"/>
+                        <rect key="frame" x="16" y="101.5" width="296" height="233"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="253" image="halloween-loading" translatesAutoresizingMaskIntoConstraints="NO" id="c7U-EM-TGb">
-                                <rect key="frame" x="76.5" y="0.0" width="120" height="128"/>
+                                <rect key="frame" x="88" y="0.0" width="120" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" priority="100" id="Zn5-rH-3Dz"/>
                                     <constraint firstAttribute="width" secondItem="c7U-EM-TGb" secondAttribute="height" priority="100" id="sgm-6z-Mtd"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cIN-cg-xzD">
-                                <rect key="frame" x="0.0" y="148" width="273" height="23"/>
+                                <rect key="frame" x="0.0" y="148" width="296" height="23"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Subtitle" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="B15-GK-QdK">
-                                <rect key="frame" x="0.0" y="176" width="273" height="17"/>
+                                <rect key="frame" x="0.0" y="176" width="296" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="JMg-2S-oJM">
-                                <rect key="frame" x="126.5" y="213" width="20" height="20"/>
+                                <rect key="frame" x="138" y="213" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,8 +61,8 @@
                             <constraint firstAttribute="trailing" secondItem="B15-GK-QdK" secondAttribute="trailing" id="zb8-PG-fta"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sn-za-oDj">
-                        <rect key="frame" x="104.5" y="303" width="96" height="44"/>
+                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sn-za-oDj">
+                        <rect key="frame" x="116" y="344.5" width="96" height="44"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="jgb-0c-2h7">
                                 <variation key="heightClass=compact-widthClass=compact" constant="40"/>
@@ -91,14 +87,13 @@
             </view>
             <constraints>
                 <constraint firstItem="MXU-dt-vhe" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leadingMargin" id="3rF-DX-Ipu"/>
-                <constraint firstAttribute="bottom" secondItem="2sn-za-oDj" secondAttribute="bottom" constant="20" id="IuB-zj-UQA"/>
-                <constraint firstItem="2sn-za-oDj" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MXU-dt-vhe" secondAttribute="bottom" constant="10" id="NjB-8k-iQn"/>
+                <constraint firstItem="2sn-za-oDj" firstAttribute="top" secondItem="MXU-dt-vhe" secondAttribute="bottom" constant="10" id="NjB-8k-iQn"/>
                 <constraint firstItem="MXU-dt-vhe" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="XGd-TL-aub"/>
                 <constraint firstItem="2sn-za-oDj" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="m4y-Q7-xpV"/>
                 <constraint firstAttribute="trailingMargin" secondItem="MXU-dt-vhe" secondAttribute="trailing" id="vJh-iC-MCx"/>
                 <constraint firstItem="MXU-dt-vhe" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" priority="250" id="zVD-Qe-9GU"/>
             </constraints>
-            <size key="customSize" width="141" height="112"/>
+            <size key="customSize" width="164" height="181"/>
             <connections>
                 <outlet property="actionButton" destination="2sn-za-oDj" id="kQW-q1-oK2"/>
                 <outlet property="activityIndicator" destination="JMg-2S-oJM" id="xcA-Qs-V89"/>
@@ -106,10 +101,13 @@
                 <outlet property="subtitleLabel" destination="B15-GK-QdK" id="qCM-Yc-nav"/>
                 <outlet property="titleLabel" destination="cIN-cg-xzD" id="fBh-V1-fkO"/>
             </connections>
-            <point key="canvasLocation" x="86.5" y="97.5"/>
+            <point key="canvasLocation" x="104" y="127.736131934033"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="halloween-loading" width="120" height="128"/>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
