--- a/HGPlaceholders/Classes/Cells/PlaceholderTableViewCell.xib
+++ b/HGPlaceholders/Classes/Cells/PlaceholderTableViewCell.xib
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="landscape">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina5_9" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PlaceholderTableViewCell" rowHeight="377" id="4kA-8L-Xft" customClass="PlaceholderTableViewCell" customModule="HGPlaceholders">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="377"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PlaceholderTableViewCell" rowHeight="375" id="4kA-8L-Xft" customClass="PlaceholderTableViewCell" customModule="HGPlaceholders">
+            <rect key="frame" x="0.0" y="0.0" width="433" height="375"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4kA-8L-Xft" id="iKY-3X-d02">
-                <rect key="frame" x="44" y="0.0" width="232" height="376.66666666666669"/>
+                <rect key="frame" x="44" y="0.0" width="389" height="375"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="db1-Fl-G6D">
-                        <rect key="frame" x="8" y="82" width="304" height="213"/>
+                        <rect key="frame" x="16" y="81" width="401" height="213"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="halloween-loading" translatesAutoresizingMaskIntoConstraints="NO" id="oEI-sb-ulS">
-                                <rect key="frame" x="92" y="0.0" width="120" height="128"/>
+                                <rect key="frame" x="140.66666666666666" y="0.0" width="119.99999999999997" height="128"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="oEI-sb-ulS" secondAttribute="height" multiplier="1:1" priority="100" id="PV3-EQ-CV6"/>
@@ -32,19 +28,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="JBE-d5-jAM">
-                                <rect key="frame" x="0.0" y="138" width="304" height="23"/>
+                                <rect key="frame" x="0.0" y="138" width="401" height="23"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" systemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Subtitle" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Efm-pp-P5W">
-                                <rect key="frame" x="0.0" y="166" width="304" height="17"/>
+                                <rect key="frame" x="0.0" y="166" width="401" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="999" verticalCompressionResistancePriority="999" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="7OP-IO-NHg">
-                                <rect key="frame" x="142" y="193" width="20" height="20"/>
+                                <rect key="frame" x="190.66666666666666" y="193" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -66,8 +62,8 @@
                             <constraint firstAttribute="bottom" secondItem="7OP-IO-NHg" secondAttribute="bottom" id="uIB-AL-ph1"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QUR-tb-JTX">
-                        <rect key="frame" x="112" y="316.66666666666669" width="96" height="40"/>
+                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QUR-tb-JTX">
+                        <rect key="frame" x="168.66666666666666" y="304" width="95.999999999999972" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="44" id="t3c-Ac-ibc">
                                 <variation key="heightClass=compact-widthClass=compact" constant="40"/>
@@ -91,12 +87,11 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="db1-Fl-G6D" secondAttribute="trailing" id="2Yy-w5-LN8"/>
-                    <constraint firstAttribute="bottom" secondItem="QUR-tb-JTX" secondAttribute="bottom" constant="20" id="MV4-9T-sXN"/>
                     <constraint firstItem="db1-Fl-G6D" firstAttribute="centerY" secondItem="iKY-3X-d02" secondAttribute="centerY" priority="250" id="T7F-qH-5M0"/>
                     <constraint firstItem="db1-Fl-G6D" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iKY-3X-d02" secondAttribute="top" constant="15" id="dvA-Cx-6O9"/>
                     <constraint firstItem="QUR-tb-JTX" firstAttribute="centerX" secondItem="iKY-3X-d02" secondAttribute="centerX" id="fJs-fS-UMS"/>
                     <constraint firstItem="db1-Fl-G6D" firstAttribute="leading" secondItem="iKY-3X-d02" secondAttribute="leadingMargin" id="sSD-KP-29l"/>
-                    <constraint firstItem="QUR-tb-JTX" firstAttribute="top" relation="greaterThanOrEqual" secondItem="db1-Fl-G6D" secondAttribute="bottom" constant="10" id="zDq-pR-Ss6"/>
+                    <constraint firstItem="QUR-tb-JTX" firstAttribute="top" secondItem="db1-Fl-G6D" secondAttribute="bottom" constant="10" id="zDq-pR-Ss6"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -107,10 +102,13 @@
                 <outlet property="subtitleLabel" destination="Efm-pp-P5W" id="laL-gg-u6o"/>
                 <outlet property="titleLabel" destination="JBE-d5-jAM" id="R3t-Ch-56d"/>
             </connections>
-            <point key="canvasLocation" x="74" y="220.5"/>
+            <point key="canvasLocation" x="115.64039408866995" y="218.40000000000001"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="halloween-loading" width="120" height="128"/>
+        <systemColor name="darkTextColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
